Rearrange CSS + fix some layout issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,15 @@ body.light-mode {
   background-color: white;
   color: black;
 }
+ /* Show the footer when scrolling down */
+ body.active-footer .footer {
+  bottom: 0;
+}
+body,
+p,
+h1 {
+ font-family: "Haas Grot Disp 65 Medium", sans-serif;
+}
 a:visited {
   color:inherit
 }
@@ -59,10 +68,6 @@ a.dark-mode {
 .blue-link {
   color: rgb(55,201,188)
 }
-.background.light-mode {
-  background-image: url('E&S-frame-white.png');
-  /* Replace with your light mode image */
-}
 .background {
   position: absolute;
   top: 0;
@@ -81,34 +86,15 @@ a.dark-mode {
 .background.dark-mode {
   background-image: url('E&S-frame-black.png');
 }
-
-footer {
-    z-index: 1;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 100px; /* Set the height of your footer */
-    background-color: red; /* Set the background color to red */
-    transition: bottom 0.3s; /* Add smooth transition effect */
+.background.light-mode {
+  background-image: url('E&S-frame-white.png');
+  /* Replace with your light mode image */
 }
-#toggle-mode-button {
-  cursor:pointer;
-  margin: 0;
-}
-
- /* Show the footer when scrolling down */
- body.active-footer .footer {
-   bottom: 0;
- }
- body,
- p,
- h1 {
-  font-family: "Haas Grot Disp 65 Medium", sans-serif;
- }
 .container {
   display: flex;
   flex-direction: row;
   padding: 10vh;
+  width: 100%;
 }
 .container > h1 {
   padding-bottom: -15px;
@@ -116,17 +102,6 @@ footer {
 .left-side {
   display: flex;
   flex-direction: column;
-  flex: 1;
-}
-.menu li {
-  list-style: none;
-}
-.menu ul {
-  padding: 0;
-}
-.video {
-  align-items: center;
-  display: flex;
   flex: 1;
 }
 .title h1 {
@@ -138,17 +113,37 @@ footer {
 .title p {
   margin-top:0px;
 }
-
+.menu li {
+  list-style: none;
+}
+.menu ul {
+  padding: 0;
+}
+.center {
+  margin-top: 3.5rem;
+  flex: 2 1 0%;
+  max-width: 40vw;
+}
+.center h4 {
+  margin-left: 5rem;
+}
+.center p {
+  text-indent: 5rem;
+}
 .right-side {
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin-top: 25vh;
-  margin-left: 3rem;
+  /* margin-left: 3rem; */
 }
-
-.footer {
-  align-content: center;
+.right-side ul {
+  margin: 0;
+}
+.right-side li {
+  list-style: none;
+}
+.news {
+  margin-top: 4.83rem;
 }
 .layout-options {
   position: fixed;
@@ -160,9 +155,20 @@ footer {
   text-align: right;
   list-style: none;
 }
-.center {
-  margin-top: 3.5rem;
+#toggle-mode-button {
+  cursor:pointer;
+  margin: 0;
 }
+footer {
+  z-index: 1;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px; /* Set the height of your footer */
+  background-color: red; /* Set the background color to red */
+  transition: bottom 0.3s; /* Add smooth transition effect */
+}
+
 @media (max-width: 800px) {
   body {
     margin: 0;
